# tauri-windows-installer

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: build.yaml
bundler/: Cargo.toml  build.rs
bundler-app/: Cargo.toml
bundler-app/src/: main.rs
bundler-lib/: Cargo.toml
bundler-lib/src/: exe_packager.rs  lib.rs  metadata.rs
bundler/src/: exe_packager.rs  main.rs  plugin_config.rs  webview2.rs
demo-app/: package.json  pnpm-lock.yaml
demo-app/src-tauri/: Cargo.toml  tauri.conf.json
demo-app/src-tauri/capabilities/: default.json
demo-app/src-tauri/src/: main.rs
installer/: .env  Cargo.toml  app.manifest  build.rs  config.toml
installer/src/: application.rs  binary.rs  bundle.rs  dialogs.rs  lib.rs  main.rs  manifest.rs  process.rs  uninstall.rs  webview2.rs  windows.rs
installer/src/bundle/: application.rs  webview2.rs
uninstall/: Cargo.toml
uninstall/src/: lib.rs  to_wide.rs
