[workspace]
resolver = "2"
members = ["demo-app/src-tauri", "bundler", "bundler-app", "installer"]
package.version = "0.1.0"
package.edition = "2021"
package.authors = ["@Gussy"]

# Build order for "bundler-app" and "demo-app/src-tauri"
# are important, therefore they are not built by default
default-members = ["bundler", "installer"]

[workspace.dependencies]
tauri = { version = "=2.0.0-rc.1" }
bytesize = "1.3.0"
bundler = { path = "bundler" }
tauri-windows-installer = { path = "installer" }
