[workspace]
resolver = "2"
members = [
    "demo-app/src-tauri",
    "bundler-lib",
    "bundler",
    "installer",
    "uninstall",
]
package.version = "0.1.0"
package.edition = "2021"
package.authors = ["@Gussy"]
package.license = "MIT"

# Build order for "bundler" and "demo-app/src-tauri"
# are important, therefore they are not built by default
default-members = ["bundler-lib", "installer"]

[workspace.dependencies]
# Local dependencies
twi_bundler_lib = { path = "bundler-lib" }
twi_installer = { path = "installer" }
twi_uninstall = { path = "uninstall" }

# External dependencies
tauri = { version = "=2.0.0-rc.1" }
bytesize = "1.3.0"
anyhow = "1.0.86"
winreg = "0.52.0"
remove_dir_all_ext = "0.8.4"
