[package]
name = "bundler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bundler"
path = "src/main.rs"

[lib]
name = "bundler"
path = "src/lib.rs"

[dependencies]
bytesize = "1.3.0"
clap = { version = "4.5.13", features = ["derive"] }
colored = "2.1.0"
serde = "1.0.204"
serde_json = "1.0.122"
tauri.workspace = true
reqwest = { version = "0.12.5", features = ["blocking"] }
tempfile = "3.12.0"
dirs-next = "2.0.0"

[dev-dependencies]
mockito = "1.5.0"
