[package]
name = "bundler"
version = "0.1.0"
edition = "2021"

[lib]
name = "bundler"
path = "src/lib.rs"

[dependencies]
tauri.workspace = true
bytesize.workspace = true
serde = "1.0.204"
serde_json = "1.0.122"
reqwest = { version = "0.12.5", features = ["blocking"] }
tempfile = "3.12.0"
dirs-next = "2.0.0"

[dev-dependencies]
mockito = "1.5.0"
