[package]
name = "twi_bundler"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "bundler"
path = "src/main.rs"


[dependencies]
twi_bundler_lib.workspace = true
bytesize.workspace = true
clap = { version = "4.5.13", features = ["derive"] }
colored = "2.1.0"
