[package]
name = "tauri-windows-installer"
version = "0.1.0"
edition = "2021"
default-run = "setup"

[dependencies]
bundler.workspace = true
anyhow = "1.0.86"
chrono = "0.4.38"
fs_extra = "1.3.0"
rand = "0.8.5"
remove_dir_all = "0.8.3"
sysinfo = "0.31.2"
tempdir = "0.3.7"
toml = "0.8.19"
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi"] }
winreg = "0.52.0"
winsafe = { version = "0.0.22", features = ["gui"] }
webview2-com = "0.32.0"
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_UI",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_Variant",
    "Win32_System_Environment",
    "Win32_Storage_EnhancedStorage",
    "Win32_Storage_FileSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_WindowsProgramming",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Kernel",
    "Wdk",
    "Wdk_System",
    "Wdk_System_Threading",
] }

[lib]
name = "tauri_windows_installer"
path = "src/lib.rs"

[[bin]]
name = "setup"
path = "src/main.rs"

[build-dependencies]
embed-manifest = "1.4.0"

[package.metadata.embed-resource]
name = "app.manifest"
