[package]
name = "twi_uninstall"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
winreg.workspace = true
windows = { version = "0.58.0", features = [
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
] }
remove_dir_all_ext.workspace = true
